--- a/AB-test_3.ipynb
+++ b/AB-test_3.ipynb
@@ -125,8 +125,8 @@
     "# устанавливаем параметры\n",
     "connection = {\n",
     "    'host': 'https://clickhouse.lab.karpov.courses',\n",
-    "    'password': 'dpo_python_2020',\n",
-    "    'user': 'student',\n",
+    "    'password': '******',\n",
+    "    'user': '******',\n",
     "    'database': 'simulator_20230220'\n",
     "}"
    ]
@@ -772,7 +772,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
