--- a/AA-test/AB-test.ipynb
+++ b/AA-test/AB-test.ipynb
@@ -298,7 +298,7 @@
    "outputs": [],
    "source": [
     "# Создадим вспомогательную функцию\n",
-    "def simulation (df1, df2, n_users, n_tests):\n",
+    "def sim(df1, df2, n_users, n_tests):\n",
     "    p_value = []\n",
     "    for i in range(n_tests):\n",
     "        sample_1 = df1.sample(n_users, replace=False)\n",
@@ -315,7 +315,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "p_value = simulation(df_group[df_group.exp_group == 2].ctr, df_group[df_group.exp_group == 3].ctr, 500, 10000)"
+    "p_value = sim(df_group[df_group.exp_group == 2].ctr, df_group[df_group.exp_group == 3].ctr, 500, 10000)"
    ]
   },
   {
